--- a/docs/css/estilo.css
+++ b/docs/css/estilo.css
@@ -165,7 +165,7 @@ h3{
 
 /* From Uiverse.io by nikk7007 */ 
 .btn {
-  --color: #00A97F;
+  --color: #ff0000;
   --color2: rgb(10, 25, 30);
   padding: 0.8em 1.75em;
   background-color: transparent;
