--- a/docs/css/estilo.css
+++ b/docs/css/estilo.css
@@ -6,13 +6,13 @@
 }
 
 body{
-  background-color: rgb(222, 222, 222);
+  background-color: rgb(0, 0, 0);
 }
 
 h1{
   font-size: 26px;
   line-height: 32px;
-  color: #000000;
+  color: #ffffff;
   font-weight: 600;
   text-transform: uppercase;
 }
@@ -27,6 +27,11 @@ a{
   cursor: pointer;
 }
 
+h2{
+  font-size: 30px;
+  color: #fff;
+}
+
 h3{
   font-size: 10px;
 }
@@ -34,7 +39,7 @@ h3{
 .header-main {
   width: 100%;
   height: 60px;
-  background-color: rgb(38, 38, 38);
+  background-color: rgb(255, 0, 0);
   display: flex;
   justify-content: space-between;
   color: white;
@@ -83,7 +88,7 @@ h3{
 }
 
 .header-main-nav ul li a:hover {
-  color: red;
+  color: rgb(0, 0, 0);
 }
 
 .header-main-sm{
@@ -120,7 +125,7 @@ h3{
     inset 12px 0px 12px -6px rgba(3, 15, 20, 0),
     inset -12px 0px 12px -6px rgba(3, 15, 20, 0),
     rgba(54, 69, 75, 1) -1px -1px 6px 0px;
-  border: solid 2px #030f14;
+  border: solid 2px #ffffff;
   cursor: pointer;
   font-size: 18px;
   padding: 0.7em 1.7em;
@@ -131,11 +136,11 @@ h3{
 
 .button:hover {
   box-shadow:
-    inset 0px -6px 18px -6px rgba(3, 15, 20, 1),
-    inset 0px 6px 18px -6px rgba(3, 15, 20, 1),
-    inset 12px 0px 12px -6px rgba(3, 15, 20, 0),
+    inset 0px -6px 18px -6px rgb(255, 0, 0),
+    inset 0px 6px 18px -6px rgb(255, 0, 0),
+    inset 12px 0px 12px -6px rgba(255, 0, 0, 0),
     inset -12px 0px 12px -6px rgba(3, 15, 20, 0),
-    -1px -1px 6px 0px rgba(54, 69, 75, 1);
+    -1px -1px 6px 0px rgb(75, 54, 54);
 }
 
 .button:active {
