--- a/docs/css/estilo.css
+++ b/docs/css/estilo.css
@@ -171,7 +171,7 @@ h3{
 /* From Uiverse.io by nikk7007 */ 
 .btn {
   --color: #ff0000;
-  --color2: rgb(10, 25, 30);
+  --color2: rgb(0, 0, 0);
   padding: 0.8em 1.75em;
   background-color: transparent;
   border-radius: 6px;
@@ -226,6 +226,64 @@ h3{
  }
 
  /**/
+
+ .butFooter {
+  --color: #ffffff;
+  --color2: rgb(0, 0, 0);
+  padding: 0.8em 1.75em;
+  background-color: transparent;
+  border-radius: 6px;
+  border: .3px solid var(--color);
+  transition: .5s;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  z-index: 1;
+  font-weight: 300;
+  font-size: 17px;
+  font-family: 'Roboto', 'Segoe UI', sans-serif;
+  text-transform: uppercase;
+  color: var(--color);
+ }
+ 
+ .butFooter::after, .butFooter::before {
+  content: '';
+  display: block;
+  height: 100%;
+  width: 100%;
+  transform: skew(90deg) translate(-50%, -50%);
+  position: absolute;
+  inset: 50%;
+  left: 25%;
+  z-index: -1;
+  transition: .5s ease-out;
+  background-color: var(--color);
+ }
+ 
+ .butFooter::before {
+  top: -50%;
+  left: -25%;
+  transform: skew(90deg) rotate(180deg) translate(-50%, -50%);
+ }
+ 
+ .butFooter:hover::before {
+  transform: skew(45deg) rotate(180deg) translate(-50%, -50%);
+ }
+ 
+ .butFooter:hover::after {
+  transform: skew(45deg) translate(-50%, -50%);
+ }
+ 
+ .butFooter:hover {
+  color: var(--color2);
+ }
+ 
+ .butFooter:active {
+  filter: brightness(.7);
+  transform: scale(.98);
+ }
+
+ /*
 .butFooter {
   cursor: pointer;
   position: relative;
@@ -266,6 +324,6 @@ h3{
 
 .butFooter:active {
   scale: 1;
-}
+}*/
 
 
