--- a/docs/css/estilo.css
+++ b/docs/css/estilo.css
@@ -17,7 +17,7 @@ body {
 h1{
   font-size: 26px;
   line-height: 32px;
-  color: #ffffff;
+  color: rgb(255, 255, 255);
   font-weight: 600;
   text-transform: uppercase;
 }
@@ -45,11 +45,11 @@ h3{
 .header-main {
   width: 100%;
   height: 60px;
-  background-color: rgb(255, 0, 0);
+  background-color: rgb(183, 9, 9);
   display: flex;
   justify-content: space-between;
   color: white;
-
+  /*border: 2px solid rgb(255, 255, 255);*/
   position: fixed; /* Hace que el header esté fijo */
   top: 0;          /* Lo posiciona en la parte superior */
   z-index: 1000; /* Asegura que el header esté por encima de otros elementos */
@@ -130,7 +130,7 @@ h3{
     inset 12px 0px 12px -6px rgba(3, 15, 20, 0),
     inset -12px 0px 12px -6px rgba(3, 15, 20, 0),
     rgba(54, 69, 75, 1) -1px -1px 6px 0px;
-  border: solid 2px #ffffff;
+  border: solid 2px #cf0606;
   cursor: pointer;
   font-size: 18px;
   padding: 0.7em 1.7em;
@@ -150,9 +150,9 @@ h3{
 
 .button:active {
   box-shadow:
-    inset 0px -12px 12px -6px rgba(3, 15, 20, 1),
-    inset 0px 12px 12px -6px rgba(3, 15, 20, 1),
-    inset 12px 0px 12px -6px rgba(3, 15, 20, 1),
+    inset 0px -12px 12px -6px rgb(255, 0, 0),
+    inset 0px 12px 12px -6px rgb(255, 0, 0),
+    inset 12px 0px 12px -6px rgb(20, 3, 3),
     inset -12px 0px 12px -6px rgba(3, 15, 20, 1),
     -1px -1px 6px 0px rgba(54, 69, 75, 1);
 }
@@ -175,7 +175,7 @@ h3{
 
 /* From Uiverse.io by nikk7007 */ 
 .btn {
-  --color: #ff0000;
+  --color: rgb(183, 9, 9);
   --color2: rgb(0, 0, 0);
   padding: 0.8em 1.75em;
   background-color: transparent;
@@ -232,8 +232,8 @@ h3{
  /**/
 
  .butFooter {
-  --color: #000000;
-  --color2: rgb(255, 0, 0);
+  --color: #ffffff;
+  --color2: rgb(183, 9, 9);
   padding: 0.8em 1.75em;
   background-color: transparent;
   border-radius: 6px;
