--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -168,7 +168,7 @@ main a:hover{
     padding: 50px 10%;
     background-color: rgb(0, 0, 0); /* Fondo oscuro */
     color: rgb(255, 255, 255); /* Color del texto */
-    border: 2px solid rgb(255, 255, 255);
+    /*border: 2px solid rgb(255, 255, 255);*/
     
 }
 
@@ -183,8 +183,9 @@ main a:hover{
     display: flex;
     justify-content: space-between; /* Separa uniformemente los elementos */
     align-items: center; /* Alinea los elementos verticalmente */
-    max-width: 1200px; /* Limita el ancho máximo */
+    max-width: 2400px; /* Limita el ancho máximo */
     background-color: transparent;
+    gap: 10px;
 }
 
 .footer a {
@@ -200,8 +201,8 @@ main a:hover{
     color: rgb(255, 255, 255);
     border-radius: 10px; /* Opcional: bordes redondeados */
     font-weight: bold;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 200px;
+    margin-right: 200px;
 }
 
 .footer button{
